修正 issue 第7點
Option	元件調整

下拉選單超出範圍ScrollBar,
現行會影響整個畫面的Scroll Bar,
改成於下拉選單內Scroll Bar

--- a/src/assets/scss/_module.scss
+++ b/src/assets/scss/_module.scss
@@ -1549,6 +1549,7 @@ h2 {
 
 		._device & {
 			width: 1082px;
+			max-height: 100%;
 			padding-left: 40px;
 			padding-right: 40px;
 		}
@@ -2519,6 +2520,11 @@ h2 {
 
 		.on+& {
 			display: block;
+		}
+
+		._device &{
+			overflow-y: auto;
+			max-height: 150px;
 		}
 	}
 
